introduced a list of phone numbers to customer added more errors, made phone number a string, added two more endpoints. Introduced phoneNumber Service. Added integration testing